add getRandomQuote function

--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
     "email": "davr59@outlook.com.com"
   },
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/davr59/spanish-quotes.git"
+  },
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-standard": "^16.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0"
   },
   "author": "davr59 <davr59@outlook.com.com>",
   "license": "MIT",
