--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spanish-quotes",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A simple NPM Package which returns quotes in spanish.",
   "keywords": [
     "spanish",
@@ -18,7 +18,9 @@
     "email": "davr59@outlook.com.com"
   },
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/davr59/spanish-quotes.git"
