--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spanish-quotes",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A simple NPM Package which returns quotes in spanish.",
   "keywords": [
     "spanish",
@@ -17,7 +17,8 @@
     "url": "https://github.com/davr59/spanish-quotes/issues",
     "email": "davr59@outlook.com.com"
   },
-  "main": "index.js",
+  "main": "./lib/quote.js",
+  "bin": "./bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
