--- a/.nycrc
+++ b/.nycrc
@@ -1,4 +1,8 @@
 {
   "all": true,
-  "check-coverage": true
+  "check-coverage": true,
+  "branches": 90,
+  "lines": 90,
+  "functions": 90,
+  "statements": 90
 }
