--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint-fix": "npm run lint -- --fix",
     "pretest": "npm run lint",
     "test": "c8 --all mocha ./test",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -32,15 +33,22 @@
   },
   "type": "module",
   "devDependencies": {
+    "c8": "^7.11.3",
     "chai": "^4.3.6",
-    "eslint": "^8.12.0",
+    "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4",
-    "mocha": "^9.2.2",
-    "c8": "^7.11.0"
+    "eslint-plugin-import": "^2.26.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "mocha": "^10.0.0",
+    "prettier": "^2.7.1"
   },
   "dependencies": {
     "seedrandom": "^3.0.5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "*.{js,jsx,ts,tsx,md,html,css,scss,json}": "prettier --write"
   },
   "author": "davr59 <davr59@outlook.com.com>",
   "license": "MIT"
